--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<meta charset="UTF8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 		<title>LD34 by Estuardolh</title>
 		
 		<script type="text/javascript" src="./engine.js"></script>
@@ -11,7 +13,7 @@
 			<canvas id="screen" style="background-color:gray;" width="300px" height="300px" ></canvas>
 		</center>
 		<script type="text/javascript">
-			// engine.start();
+			engine.start();
 		</script>
 	</body>
 </html>
