--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body bgcolor="black">
 		<center>
-			<canvas id="screen" style="background-color:gray;" width="300px" height="300px" ></canvas>
+			<canvas id="screen" style="background-color:gray;position:absolute;top:0;left:0;" width="300px" height="300px" ></canvas>
 		</center>
 		<script type="text/javascript">
 			engine.start();
